--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,7 +1,7 @@
 include-file = ~/.config/polybar/colors/nord.ini
 
 [bar/useful]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 28px
 ;offset-x = 0%
@@ -32,7 +32,7 @@ font-2 = FontAwesome:size=10
 
 modules-left = shortcuts i3
 modules-center =
-modules-right = network-publicip pulseaudio memory cpu date
+modules-right = pulseaudio network-publicip memory cpu date
 
 tray-position = right
 tray-padding = 1
